Fix search button wrapping to new line
We were using the `govuk-input--wrapper` class to style the search input and search button to sit side by side, however this wraps to a new line on smaller screens, and would be hidden by the autocomplete element.
Removed the class, and added the relevant styles to our `app-search--wrapper` class without the media query. We will see how this tests with users using smaller screens and larger font sizes - to check the search input is large enough.

--- a/DfE.FindInformationAcademiesTrusts/assets/sass/components/_search.scss
+++ b/DfE.FindInformationAcademiesTrusts/assets/sass/components/_search.scss
@@ -84,9 +84,27 @@
   }
 }
 
-.app-search--main {
+.app-search__wrapper {
+  display: -ms-flexbox;
+  display: flex;
+
   & > div {
     width: 100%;
+  }
+
+  .govuk-input {
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+  }
+
+  .govuk-input__wrapper .govuk-input:focus {
+    z-index: 2;
+  }
+
+  @media (width <= 19.99em) {
+    .govuk-input__wrapper .govuk-input {
+      max-width: 100%;
+    }
   }
 
   .autocomplete__input,
